code commit@Rahul
financial api , financial list view and list view of user has been done

--- a/src/main/resources/templates/layouts/listview/listofUser.html
+++ b/src/main/resources/templates/layouts/listview/listofUser.html
@@ -36,57 +36,51 @@
 
 								<div class="box box-primary">
 									<div class="box-header with-border">
-										<h3 class="box-title">List of Category</h3>
+										<h3 class="box-title">List of User</h3>
 									</div>
 									<!-- form start -->
 									<form role="form">
 										<div class="box-body">
 											<div class="table-responsive-sm">
-												<div class="table-responsive-sm">
-													<table class="table table-striped" style="width: 80%">
-														<thead>
-															<tr>
-																<th scope="col">#</th>
-																<th scope="col">Financial Code</th>
-																<th scope="col">From Date</th>
-																<th scope="col">To date</th>
+									<table class="table table-striped" style="width: 80%">
+										<thead>
+											<tr>
+												<th scope="col">#</th>
+												<th scope="col">User Code</th>
+												<th scope="col">User Name</th>
+												<th scope="col">Employee</th>
+												
+												<th scope="col">Status</th>
+												<th scope="col">Action</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr th:each="user,iter  : ${listMyUser}">
+												<td th:text="${iter.index}">1</td>
+												<td th:text="${user.userCode}">Garrett Winters</td>
+												<td th:text="${user.userName}">Garrett Winters</td>
+												<td th:text="${user.employee.empName}">Garrett Winters</td>
+												
 
+												<td><span class="badge bg-success"
+													>Active</span></td>
 
-																<th scope="col">Action</th>
-															</tr>
-														</thead>
-														<tbody>
-															<tr th:each="financialyear,iter  : ${financialYearList}">
-																<td th:text="${iter.index}">1</td>
-																<td th:text="${financialyear.financialYearCode}">Garrett
-																	Winters</td>
-																<td th:text="${financialyear.fromDate}">Garrett Winters
-																</td>
-																<td th:text="${financialyear.toDate}">Garrett Winters
-																</td>
-
-
-																<td><span> <a
-																			th:href="@{/financialyear/edit/{id}(id=${financialyear.id})}">edit</a></span>
-																	<span> <a
-																			th:href="@{/financialyear/delete/{id}(id=${financialyear.id})}">delete</a></span>
-																</td>
-															</tr>
+												<td><span> <a th:href="@{/user/edit/{id}(id=${user.userCode})}">edit</a></span> <span> <a
+														th:href="@{/user/delete/{id}(id=${user.userCode})}">delete</a></span></td>
+											</tr>
 
 
 
 
-														</tbody>
-													</table>
+										</tbody>
+									</table>
+								</div>
+										</div>
 
-												</div>
-
-												<div class="row" style="margin: 10px">
-													<input type="submit" value="Back"
-														onclick='javascript:window.history.back()'
-														class="btn btn-link" />
-												</div>
-
+										<div class="box-footer">
+											<input type="submit" value="Back" onclick='window.history.back();'
+												class="btn btn-link" />
+										</div>
 
 									</form>
 								</div>
