--- a/src/main/resources/templates/layouts/Master/financialactiveyear.html
+++ b/src/main/resources/templates/layouts/Master/financialactiveyear.html
@@ -39,19 +39,35 @@
 									<div class="box-body">
 
 										<div class="form-group col-md-12">
-											<label for="inputEmail4">Financial Year Code</label> <input type="text"
-												class="form-control" placeholder="financial year code"
-												th:field="*{financialYearCode}">
+											<label for="inputEmail4">User</label> <select
+												class="form-control" id="departmentDropdown"
+												th:field = "*{myUser}"
+												onchange="" title="user code" required>
+												<option value="">Select Department</option>
+												<option th:each="user :  ${listMyUser}"
+													th:text="${department.deptName}"
+													th:value=" ${department.departmentCode}"></option>
+											</select>
 										</div>
+
+
 										<div class="form-group col-md-6">
-											<label for="inputPassword4">From (Date)</label> <input type="date"
-												class="form-control" placeholder="from date" th:field="*{fromDate}">
+											<label for="inputPassword4">User Name</label> <input type="text"
+												class="form-control" placeholder="from date" id="userName">
 										</div>
 
 										<div class="form-group col-md-6">
-											<label for="inputEmail4">To (Date)</label> <input type="date"
-												class="form-control" placeholder="to date" th:field="*{toDate}">
+											<label for="inputEmail4">FinancialYear</label> <select class="form-control"
+												id="financialYear" onchange=""
+												title="Financial year" required>
+												<option value="">Select Department</option>
+												<option th:each="financialYear :  ${listFinancialyear}"
+													th:text="${financialYear.financialYearCode}"
+													th:value=" ${financialYear.financialYearCode}"></option>
+											</select>
 										</div>
+										
+										
 
 										<div class="form-group" style="margin: 10px;">
 
@@ -95,7 +111,7 @@
 			<!--   <section class="content">
         
         </section>-->
-		<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
 			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
 			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
