--- a/src/main/resources/templates/layouts/Master/companyDetail.html
+++ b/src/main/resources/templates/layouts/Master/companyDetail.html
@@ -587,14 +587,14 @@
 																		<fieldset>
 																			<input type="text" class="form-control"
 																				placeholder=""
-																				name="insuranceDetail[0].insuranceCode">
+																				readonly>
 																		</fieldset>
 																	</th>
 																	<td>
 																		<fieldset>
 																			<input type="text" class="form-control"
 																				placeholder=""
-																				name="insuranceDetail[0].company">
+																				readonly>
 																		</fieldset>
 																	</td>
 																	<td>
