--- a/src/main/resources/templates/layouts/Master/country.html
+++ b/src/main/resources/templates/layouts/Master/country.html
@@ -39,12 +39,12 @@
 
 										<div class="form-group col-md-6">
 											<label for="inputEmail4">Country Code</label> <input type="text"
-												class="form-control" placeholder="module code"
+												class="form-control" placeholder="country code"
 												th:field="*{countryCode}">
 										</div>
 										<div class="form-group col-md-6">
 											<label for="inputPassword4">Country Name</label> <input type="text"
-												class="form-control" placeholder="module name"
+												class="form-control" placeholder="country name"
 												th:field="*{countryName}">
 										</div>
 
