--- a/src/main/resources/templates/layouts/listview/listofFinancialyear.html
+++ b/src/main/resources/templates/layouts/listview/listofFinancialyear.html
@@ -36,7 +36,7 @@
 
 								<div class="box box-primary">
 									<div class="box-header with-border">
-										<h3 class="box-title">List of Category</h3>
+										<h3 class="box-title">List of Financial year</h3>
 									</div>
 									<!-- form start -->
 									<form role="form">
